# AI_Agent_From_Scratch

./: .env.template  README.md  main.py  pyproject.toml  requirements.txt  scratch_test_mongo.py  truncate_db.py
Test_Scripts/: check_similarity.py  debug_ltm.py  inspect_db.py  profile_latency.py  test_api.py  test_connection.py  test_e2e_recall.py  test_edge_cases.py  test_phase4c.py
agent/: base.py  simple_agent.py
api/: main.py
api/routes/: chat.py  memories.py  sessions.py
config/: logging_config.py  settings.py
database/: connection.py  models.py
docs/: 01_PROJECT_DOCUMENTATION_1.md  02_LONG_TERM_MEMORY_DEEP_DIVE.md  03_LONG_TERM_MEMORY_ARCHITECTURE_RECOMMENDATION.md  04_LONG_TERM_MEMORY_IMPLEMENTATION_PLAN.md  05_API_TEST_DOCUMENTATION.md  06_PHASE_5_MULTI_AGENT_SYSTEM_DESIGN.md  07_AGENTIC_AI_SYSTEM_DESIGN_AND_RESEARCH.md  08_DEEP_RESEARCH_AGENT_ARCHITECTURE.md  09_PRODUCTION_MULTI_AGENT_SYSTEM_ARCHITECTURE.md
llm/: base.py  embeddings.py  fallback_provider.py  groq_provider.py  local_openai.py
memory/: base.py  consolidator.py  fact_extractor.py  long_term.py  mongo_history.py  short_term.py
tools/: __init__.py  base.py  file_tools.py  math_tools.py  registry.py  search_tools.py  time_tools.py
